# K-Lang

./: .gitignore  CMakeLists.txt
include/: AST.h  lexer.h  parser.h
src/: CMakeLists.txt  lexer.cpp  main.cpp  parser.cpp
tests/: CMakeLists.txt
tests/parser_tests/: CMakeLists.txt  test.cpp
